--- a/lib/cookpod_web/templates/layout/app.html.eex
+++ b/lib/cookpod_web/templates/layout/app.html.eex
@@ -10,18 +10,19 @@
   </head>
   <body>
     <header>
-      <section class="container">
-        <nav role="navigation">
-          <ul>
-            <li><a href="https://hexdocs.pm/phoenix/overview.html">Get Started</a></li>
-          </ul>
-        </nav>
+      <section class="container mt-4">
         <a href="https://phoenixframework.org/" class="phx-logo">
           <img src="<%= Routes.static_path(@conn, "/images/phoenix.png") %>" alt="Phoenix Framework Logo"/>
         </a>
       </section>
     </header>
     <main role="main" class="container">
+      <%= if Plug.Conn.get_session(@conn, :current_user) do %>
+        Logged in as <%= Plug.Conn.get_session(@conn, :current_user) %>
+        <%= link "Logout", to: Routes.session_path(@conn, :delete), method: :delete %>
+      <% else %>
+        <a href="<%= Routes.session_path(@conn, :new) %>">Log in</a>
+      <% end %>
       <%= if get_flash(@conn, :info) do %>
         <p class="alert alert-info" role="alert"><%= get_flash(@conn, :info) %></p>
       <% end %>
